// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TodoCreator should correctly render 1`] = `
<TodoCreatorComponent
  newTodo={Object {}}
>
  <styled.div>
    <div
      className="sc-bdVaJa dBRzUj"
    >
      <styled.div>
        <div
          className="sc-bwzfXH igYdVz"
        >
          <styled.input
            onChange={[Function]}
            placeholder="Title"
            value={undefined}
          >
            <input
              className="sc-htpNat iNiuLJ"
              onChange={[Function]}
              placeholder="Title"
              value={undefined}
            />
          </styled.input>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="sc-bwzfXH igYdVz"
        >
          <styled.textarea
            onChange={[Function]}
            placeholder="Description"
            value={undefined}
          >
            <textarea
              className="sc-ifAKCX kfdXsU"
              onChange={[Function]}
              placeholder="Description"
              value={undefined}
            />
          </styled.textarea>
        </div>
      </styled.div>
      <styled.button
        disabled={true}
        onClick={undefined}
      >
        <button
          className="sc-EHOje ioCkUR"
          disabled={true}
          onClick={undefined}
        >
          Add task
        </button>
      </styled.button>
    </div>
  </styled.div>
</TodoCreatorComponent>
`;

exports[`TodoCreator should correctly render 2`] = `
<div
  class="sc-bdVaJa dBRzUj"
>
  <div
    class="sc-bwzfXH igYdVz"
  >
    <input
      class="sc-htpNat iNiuLJ"
      placeholder="Title"
    />
  </div>
  <div
    class="sc-bwzfXH igYdVz"
  >
    <textarea
      class="sc-ifAKCX kfdXsU"
      placeholder="Description"
    />
  </div>
  <button
    class="sc-EHOje ioCkUR"
    disabled=""
  >
    Add task
  </button>
</div>
`;

exports[`TodoCreator should correctly render 3`] = `
<styled.div>
  <styled.div>
    <styled.input
      onChange={[Function]}
      placeholder="Title"
    />
  </styled.div>
  <styled.div>
    <styled.textarea
      onChange={[Function]}
      placeholder="Description"
    />
  </styled.div>
  <styled.button
    disabled={true}
  >
    Add task
  </styled.button>
</styled.div>
`;
